--- a/trunk/Projects/Web/dart/android.css
+++ b/trunk/Projects/Web/dart/android.css
@@ -11,6 +11,7 @@ body {
 	padding: 0;
 }
 
+
 #header h1 a {
 	background-color: #ccc;
 	border-bottom: 1px solid #666;
@@ -30,26 +31,38 @@ body {
 	margin: 10px;
 	padding: 0;
 }
-
-#header ul li a {
+#header ul li {
 	background-color: #FFFFFF;
 	border: 1px solid #999999;
 	color: #222222;
 	display: block;
-	font-size: 17px;
 	font-weight: bold;
 	margin-bottom: -1px;
 	padding: 12px 10px;
 	text-decoration: none;
 }
 
-#header ul li:first-child a {
-	-webkit-border-top-left-radius:6px;
-	-webkit-border-top-right-radius: 6px;
+#header ul li a{
+	text-decoration : none;
+	color: #222222;
+	display: block;
+	font-weight: bold;
+
 }
 
-#header ul li:last-child a {
-	-webkit-border-bottom-left-radius:6px;
-	-webkit-border-bottom-right-radius: 6px;
+#header h2{
+   font-size: 12px;
 }
-	
+
+
+#header ul li:first-child  {
+	-webkit-border-top-left-radius:8px;
+	-webkit-border-top-right-radius: 8px;
+}
+
+#header ul li:last-child  {
+	-webkit-border-bottom-left-radius:8px;
+	-webkit-border-bottom-right-radius: 8px;
+}
+
+
