--- a/trunk/Projects/Web/dart/desktop.css
+++ b/trunk/Projects/Web/dart/desktop.css
@@ -23,7 +23,6 @@ body {
 	text-align: center;
 	text-decoration: none;
 	text-shadow : 0px 1px 1px #fff;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#999));
 }
 
 #header ul {
@@ -35,6 +34,9 @@ body {
 	background-color: #FFFFFF;
 	border: 1px solid #999999;
 	color: #222222;
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
 	display: block;
 	font-weight: bold;
 	margin-bottom: -1px;
@@ -46,8 +48,9 @@ body {
 	text-decoration : none;
 	color: #222222;
 	display: block;
+	text-align:center;
 	font-weight: bold;
-	text-align: center;
+
 }
 
 #header h2{
