--- a/trunk/Projects/Web/dartJS/style.css
+++ b/trunk/Projects/Web/dartJS/style.css
@@ -7,3 +7,7 @@
 .ui-li-aside{
 	width: 20%;
 }
+
+.ui-li-has-arrow{
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#fdfdfd), to(#f4f4f4));
+}
